--- a/src/Components/Curso/Curso_style.css
+++ b/src/Components/Curso/Curso_style.css
@@ -6,3 +6,13 @@
     background-color: #51a22b;
     color: white;
 }
+
+li{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: large;
+}
+
+.IngreseCorreo, input{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: large;
+}
